@@ -12,9 +12,9 @@
 		<%= stylesheet_link_tag "m" %>
 
 		<%= javascript_include_tag "howler" %>
+		<%= javascript_include_tag "jquery" %>
 		<!-- 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script> -->
-		<script src="/javascripts/jquery-1.7.2.min.js"></script>
-		<script src="/javascripts/fabric.js/dist/all.js"></script>
+		<!-- 		<script src="/javascripts/jquery-1.7.2.min.js"></script> -->
 	  
     <script src="/javascripts/globals.js"></script>
     <script src="/javascripts/ifClasses/screen.js"></script>
